--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "npm run build:frontend",
+    "build": "npm run build:frontend && npm run build:functions",
     "build:frontend": "vite build",
+    "build:functions": "tsc -p tsconfig.functions.json",
     "dev:frontend": "vite",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
