--- a/tsconfig.functions.json
+++ b/tsconfig.functions.json
@@ -1,16 +1,24 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",
     "lib": ["ES2020"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "netlify/functions",
-    "rootDir": "netlify/functions",
-    "moduleResolution": "node"
+    "rootDir": ".",
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["shared/*"]
+    }
   },
-  "include": ["netlify/functions/**/*.ts"],
+  "include": [
+    "netlify/functions/**/*.ts",
+    "server/**/*.ts",
+    "shared/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 } 
