Fix TypeScript configuration for Netlify functions

--- a/tsconfig.functions.json
+++ b/tsconfig.functions.json
@@ -11,6 +11,7 @@
     "rootDir": ".",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "noEmit": true,
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["shared/*"],
