--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.60.5",
+    "@types/cors": "^2.8.17",
     "@types/react-helmet": "^6.1.11",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.3",
@@ -118,4 +120,3 @@
     "bufferutil": "^4.0.8"
   }
 }
-
