--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "npm run build:frontend && npm run build:functions",
     "build:frontend": "vite build",
-    "build:functions": "tsc -p tsconfig.functions.json && cp -r server dist/functions/",
+    "build:functions": "tsc -p tsconfig.functions.json && cp -r server dist/functions/ && cp -r shared dist/functions/",
     "dev:frontend": "vite",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
