Update Netlify configuration and server function for ESM compatibility

--- a/netlify.toml
+++ b/netlify.toml
@@ -16,17 +16,7 @@
 
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = [
-    "express",
-    "pg",
-    "cors",
-    "passport",
-    "express-session",
-    "connect-pg-simple",
-    "dotenv",
-    "drizzle-orm",
-    "@neondatabase/serverless"
-  ]
+  external_node_modules = []
 
 [[redirects]]
   from = "/api/*"
