Fix SPA fallback redirect in netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,14 +18,15 @@
   node_bundler = "esbuild"
   external_node_modules = []
 
+# API redirects must come first
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/server/:splat"
   status = 200
   force = true
 
+# SPA fallback must come last
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  conditions = {Path = ["/api/*"]}
