fix: update vercel.json schema for includeFiles

--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
   },
   "functions": {
     "dist/index.js": {
-      "includeFiles": "dist/client/**"
+      "includeFiles": "dist/client/**/*"
     }
   }
 }
