--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/client/$1"
+      "dest": "/dist/public/$1"
     }
   ],
   "env": {
@@ -24,7 +24,7 @@
   },
   "functions": {
     "dist/index.js": {
-      "includeFiles": "dist/client/**/*"
+      "includeFiles": "dist/public/**/*"
     }
   }
 }
