--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Production
 dist
+build
+
+# Misc
+.DS_Store
 .env
 .env.local
-.DS_Store
-*.log
-server/public
-vite.config.ts.*
-*.tar.gz
-# Local Netlify folder
-.netlify
+.env.development.local
+.env.test.local
+.env.production.local
+*.pem
+.vscode
