--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "@shared/*": ["shared/*"]
     }
   },
-  "include": ["src", "server", "shared", "netlify/functions"],
+  "include": ["src", "server", "shared"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
