--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,9 @@ services:
     env: node
     region: ohio
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: |
+      npm install --include=dev
+      npm run build:server
     startCommand: npm run start
     healthCheckPath: /api/health
     envVars:
