fix: update build scripts and render configuration

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "dev:frontend": "vite",
+    "build": "npm run build:server",
     "build:frontend": "vite build",
     "build:server": "tsc -p tsconfig.json && cp -r server dist/ && cp -r shared dist/",
     "start": "NODE_ENV=production node dist/server/index.js",
