--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,7 @@ services:
     env: node
     region: ohio
     plan: free
-    buildCommand: |
-      npm ci --omit=dev
-      npm i typescript tsx -D
-      npm run build:server
+    buildCommand: npm ci --omit=dev && npm i typescript tsx -D && npm run build:server
     startCommand: NODE_ENV=production node dist/server/index.js
     healthCheckPath: /api/health
     envVars:
