--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "dev:frontend": "vite",
     "build": "npm run build:server",
     "build:frontend": "vite build",
-    "build:server": "tsc -p tsconfig.json && cp -r server dist/ && cp -r shared dist/",
+    "build:server": "tsc -p tsconfig.server.json",
     "start": "NODE_ENV=production node dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push:pg",
     "db:generate": "drizzle-kit generate:pg"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
+    "@types/express": "4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
+    "@types/cors": "^2.8.17",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
@@ -39,10 +39,15 @@
     "passport-local": "^1.0.0",
     "pg": "^8.15.6",
     "postgres": "^3.4.5",
+    "typescript": "5.6.3",
+    "tsx": "^4.19.1",
+    "uuid": "^11.0.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@jridgewell/trace-mapping": "^0.3.25",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -76,19 +81,17 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/cors": "^2.8.17",
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
     "@types/node": "^20.16.11",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-helmet": "^6.1.11",
-    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "drizzle-kit": "^0.31.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.13.1",
@@ -108,10 +111,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.1",
     "tw-animate-css": "^1.2.5",
-    "typescript": "5.6.3",
-    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "vite": "^6.3.5",
     "wouter": "^3.3.5",
