--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,7 @@
   to = "https://spicepop-backend.onrender.com/api/:splat"
   status = 200
   force = true
+  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, PATCH, OPTIONS", Access-Control-Allow-Headers = "Content-Type, Authorization"}
 
 [[redirects]]
   from = "/*"
